# Hoard

./: .gitignore  CMakeLists.txt
benchmarks/larson/: CMakeLists.txt
src/: CMakeLists.txt
src/include/hoard/: hoardmanager.h
src/source/: libhoard.cpp
